--- a/credit/user-info.html
+++ b/credit/user-info.html
@@ -3,45 +3,37 @@
 
 <head>
   <title>个人信息管理</title>
-  <!-- <base href="/test/"/> -->
-<base href="/bulid/"/>
+  
+<base href="/bulid/">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
 
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-<!-- 尺寸的设置以及页面是否允许缩放 -->
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"/>
-<!-- 删除苹果默认的工具栏和菜单栏 -->
-<meta name="apple-mobile-web-app-capable" content="yes"/>
-<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-<!-- 忽略页面中的数字识别为电话,忽略email识别 -->
-<meta name="format-detection" content="telephone=no, email=no"/>
-<!-- 启用360浏览器的极速模式(webkit) -->
-<meta name="renderer" content="webkit"/>
-<!-- 解决http https混合加载的安全性问题 -->
-<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content"/>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+<meta name="format-detection" content="telephone=no, email=no">
+
+<meta name="renderer" content="webkit">
+
+<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
 
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502854514867"/>
-<script>
-	// 项目根路径
-	// window._appPath = "http://210.14.129.41:8080/";
-	window._appPath = "/msxfInterface/";
-	// window._sitePath = "/test/"; // 测试
-	window._sitePath = "/bulid/"; // 测试
-</script>
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/style.css?v_1502855519725">
+<script>window._appPath="/msxfInterface/",window._sitePath="/bulid/"</script>
 
-    <link rel="stylesheet" href="css/scale_slip.css" />
+    <link rel="stylesheet" href="css/scale_slip.css">
 </head>
 
-<body class="user-info" style="background: #e4e4e4;">
+<body class="user-info" style="background:#e4e4e4">
   <header>
-    <a href="credit/credit_index.html?v_1502854514867" class="return_a"></a>个人信息管理</header>
+    <a href="credit/credit_index.html?v_1502855519725" class="return_a"></a>个人信息管理</header>
  
-  <div class="box-13  "> 
+  <div class="box-13"> 
     <div class="bd">
-      <ul class="account-grid ">
+      <ul class="account-grid">
         <li>
           <div class="l">姓名</div><div class="r">张某某</div>
       	</li>
@@ -58,13 +50,13 @@
           <div class="l">居住地址</div><div class="r">北京市海淀区中关村 有栋房子1-1-101</div>
       	</li>
         <li class="name">
-          <div class="l">实名认证</div><div class="r"><span class="">*某<i class="icon1"></i></span></div>
+          <div class="l">实名认证</div><div class="r"><span>*某<i class="icon1"></i></span></div>
       	</li>
         <li class="mobile">
-          <div class="l">手机验证</div><div class="r"><span class="">绑定手机号丢失或停用时更换绑定<i></i></span> </div>
+          <div class="l">手机验证</div><div class="r"><span>绑定手机号丢失或停用时更换绑定<i></i></span> </div>
       	</li>
         <li class="pay-password">
-          <div class="l">支付密码</div><div class="r"><span class="">可修改消费信贷密码<i></i></span> </div>
+          <div class="l">支付密码</div><div class="r"><span>可修改消费信贷密码<i></i></span> </div>
       	</li>
 
       </ul>
@@ -72,18 +64,16 @@
   </div> 
 </body>
 
-<!-- <scr ipt src='js/lib/zepto/zepto.min.js'></script> -->
-<!-- <sc ript src='js/lib/zepto.cookie/zepto.cookie.min.js'></script> -->
-<script src='js/lib/jquery/3.1.1/jquery.min.js'></script>
-<script src='js/lib/jquery.cookie/jquery.cookie.js'></script>
-<script src='js/lib/vue/vue.min.js'></script>
-<script src='js/lib/vue/vue-resource.min.js'></script>
-<script src='js/common/dictionary.js'></script>
-<script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502854514867'></script>
-  <script>
-  
-  </script>
+
+
+<script src="js/lib/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/lib/jquery.cookie/jquery.cookie.js"></script>
+<script src="js/lib/vue/vue.min.js"></script>
+<script src="js/lib/vue/vue-resource.min.js"></script>
+<script src="js/common/dictionary.js"></script>
+<script src="js/common/common.js"></script>
+<script src="js/common/main.js?v_1502855519725"></script>
+  <script></script>
   <script src="js/credit/user-info.js"></script>
 
 </html>
