--- a/loan/hetong.html
+++ b/loan/hetong.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>个人信用额度贷款合同-5203</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="format-detection" content="telephone=no">
 <meta name="renderer" content="webkit">
@@ -12,57 +12,7 @@
 <meta name="x5-orientation" content="portrait">
 </head>
 <body>
-<style>
-html {margin:0;padding:0;}
-body {margin:0;padding:5px;}
-body, td {font:12px/1.5 "sans serif",tahoma,verdana,helvetica;}
-body, p, div {word-wrap: break-word;}
-p {margin:0 0;}
-table {border-collapse:collapse;}
-img {border:0;}
-noscript {display:none;}
-table.ke-zeroborder td {border:1px dotted #AAA;}
-img.ke-flash {
-	border:1px solid #AAA;
-	background-image:url(http://template2.msxf.louat/static/baseui/plugins/kindeditor/themes/common/flash.gif);
-	background-position:center center;
-	background-repeat:no-repeat;
-	width:100px;
-	height:100px;
-}
-img.ke-rm {
-	border:1px solid #AAA;
-	background-image:url(http://template2.msxf.louat/static/baseui/plugins/kindeditor/themes/common/rm.gif);
-	background-position:center center;
-	background-repeat:no-repeat;
-	width:100px;
-	height:100px;
-}
-img.ke-media {
-	border:1px solid #AAA;
-	background-image:url(http://template2.msxf.louat/static/baseui/plugins/kindeditor/themes/common/media.gif);
-	background-position:center center;
-	background-repeat:no-repeat;
-	width:100px;
-	height:100px;
-}
-img.ke-anchor {
-	border:1px dashed #666;
-	width:16px;
-	height:16px;
-}
-.ke-script, .ke-noscript, .ke-display-none {
-	display:none;
-	font-size:0;
-	width:0;
-	height:0;
-}
-.ke-pagebreak {
-	border:1px dotted #AAA;
-	font-size:0;
-	height:2px;
-}
-</style><div class="turn-html-div"><div class="turn-html-div">
+<style>html{margin:0;padding:0}body{margin:0;padding:5px}body,td{font:12px/1.5 "sans serif",tahoma,verdana,helvetica}body,div,p{word-wrap:break-word}p{margin:0 0}table{border-collapse:collapse}img{border:0}noscript{display:none}table.ke-zeroborder td{border:1px dotted #aaa}img.ke-flash{border:1px solid #aaa;background-image:url(http://template2.msxf.louat/static/baseui/plugins/kindeditor/themes/common/flash.gif);background-position:center center;background-repeat:no-repeat;width:100px;height:100px}img.ke-rm{border:1px solid #aaa;background-image:url(http://template2.msxf.louat/static/baseui/plugins/kindeditor/themes/common/rm.gif);background-position:center center;background-repeat:no-repeat;width:100px;height:100px}img.ke-media{border:1px solid #aaa;background-image:url(http://template2.msxf.louat/static/baseui/plugins/kindeditor/themes/common/media.gif);background-position:center center;background-repeat:no-repeat;width:100px;height:100px}img.ke-anchor{border:1px dashed #666;width:16px;height:16px}.ke-display-none,.ke-noscript,.ke-script{display:none;font-size:0;width:0;height:0}.ke-pagebreak{border:1px dotted #aaa;font-size:0;height:2px}</style><div class="turn-html-div"><div class="turn-html-div">
 	<div class="turn-html-div">
 		<div class="turn-html-div">
 			<p>
@@ -74,74 +24,74 @@ img.ke-anchor {
 			<p>
 				<br>
 			</p>
-			<p class="MsoNormal" align="center" style="text-align:center;">
+			<p class="MsoNormal" align="center" style="text-align:center">
 				<b>&nbsp;</b><b>个人信用额度贷款合同</b> 
 			</p>
-			<p class="MsoNormal" align="center" style="text-align:center;">
+			<p class="MsoNormal" align="center" style="text-align:center">
 				<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b><b>合同编号：<span>520319030400000004</span></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>甲方（贷款人）：马上消费金融股份有限公司<span></span></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>乙方（借款人）：<span>付梓橦</span></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>身份证号码：<span>62302519851213702X</span></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>联系地址：<span>湖南省怀化市鹤城区佳惠购物中心</span></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>&nbsp;</b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>在点击页面确认和接受本合同之前，请您仔细阅读本合同的全部内容。如果您不同意本合同的任意内容，或者无法准确理解本合同各条款的解释，请不要进行点击确认及后续操作，否则表示您已经确认并同意接受本合同的全部约定内容。<span></span></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="margin-left:0cm;text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="margin-left:0;text-indent:15.05pt">
 				一、<b>基本贷款条款：</b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				1．本合同可用额度金额为2500.00元，可用额度期限为12月，自2019-04-06至2020-04-05止。甲方会根据乙方的信用表现实时对授信额度金额和额度期限进行调整。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				2．乙方可在额度有效期内使用信用额度进行消费。本合同项下每一笔贷款本金为乙方对应的订单金额（具体以乙方消费时确认的《交易信息》展示的信息为准）。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				3.本合同额度内借款按月结账，账单日为每月6日。最后还款日为每月日。乙方应在账单日至最后还款日之间偿还当期账单金额。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				4．乙方使用信用额度进行消费后可选择分期付款（仅限甲方指定消费场景使用）。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				5.分期付款<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				5.1分期付款是乙方在使用信用额度付款时或者在账单日之前对金额大于100的一笔或多笔订单，选择分为若干期向甲方偿还消费本金，并向甲方支付一定利息的一种付款方式。分期付款期数是指乙方分期偿还消费本金的月数，最长不超过6个月，具体以乙方选择分期付款时确认的《交易信息》展示的信息为准。
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;line-height:150%;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt;line-height:150%">
 				5.2乙方选择分期付款时，还款方式为等额本息。
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
-				6．甲方应在每一账单日出具账单，账单金额包含以下（<span lang="EN-US">1</span>）至（<span lang="EN-US">4</span>）项<span lang="EN-US">;&nbsp;</span>（<span lang="EN-US">1</span>）分期本金：乙方选择分期支付后，每月应偿还的贷款本金，包括分期付款的全部本金金额；（<span lang="EN-US">2</span>）分期利息：乙方选择分期支付后，每月应偿还的贷款利息，月利率详见本条第<span lang="EN-US">8</span>款收费标准。（<span lang="EN-US">3</span>）客户服务费：以当日消费的贷款本金总额为基数按日计收，月客户服务费费率详见本条第<span lang="EN-US">8</span>款收费标准。<span style="text-indent:20px;white-space:normal;">（</span><span style="text-indent:20px;white-space:normal;">4</span><span style="text-indent:20px;white-space:normal;">）逾期利息：按照逾期天数计算，每日按照逾期金额的</span><span style="text-indent:20px;white-space:normal;">0.3%</span><span style="text-indent:20px;white-space:normal;">收取。</span> 
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
+				6．甲方应在每一账单日出具账单，账单金额包含以下（<span lang="EN-US">1</span>）至（<span lang="EN-US">4</span>）项<span lang="EN-US">;&nbsp;</span>（<span lang="EN-US">1</span>）分期本金：乙方选择分期支付后，每月应偿还的贷款本金，包括分期付款的全部本金金额；（<span lang="EN-US">2</span>）分期利息：乙方选择分期支付后，每月应偿还的贷款利息，月利率详见本条第<span lang="EN-US">8</span>款收费标准。（<span lang="EN-US">3</span>）客户服务费：以当日消费的贷款本金总额为基数按日计收，月客户服务费费率详见本条第<span lang="EN-US">8</span>款收费标准。<span style="text-indent:20px;white-space:normal">（</span><span style="text-indent:20px;white-space:normal">4</span><span style="text-indent:20px;white-space:normal">）逾期利息：按照逾期天数计算，每日按照逾期金额的</span><span style="text-indent:20px;white-space:normal">0.3%</span><span style="text-indent:20px;white-space:normal">收取。</span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;line-height:150%;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt;line-height:150%">
 				7.账单分期付款<span lang="EN-US"><o:p></o:p></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;line-height:150%;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt;line-height:150%">
 				7.1账单分期付款是指金额大于100的账单，乙方可选择分期向甲方偿还，并向甲方支付一定利息的一种付款方式。账单分期付款期数是指乙方分期偿还消费本金的月数，最长不超过6个月，具体以乙方选择分期付款时确认的《交易信息》展示的信息为准。<span lang="EN-US"><o:p></o:p></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;line-height:150%;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt;line-height:150%">
 				7.2月利率为详见本条第<span lang="EN-US">8</span>款收费标准，还款方式为等额本息。<span lang="EN-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <o:p></o:p></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;line-height:150%;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt;line-height:150%">
 				7.3乙方进行账单分期的账单金额不含账期内已申请过分期的应还款金额。<span lang="EN-US"><o:p></o:p></span> 
 			</p>
-&nbsp; &nbsp; &nbsp;<span style="text-indent:15pt;">8.收费标准：</span> 
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+&nbsp; &nbsp; &nbsp;<span style="text-indent:15pt">8.收费标准：</span> 
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				<br>
 			</p>
-			<table style="width:100%;" cellpadding="2" cellspacing="0" border="1" bordercolor="#000000">
+			<table style="width:100%" cellpadding="2" cellspacing="0" border="1" bordercolor="#000000">
 				<tbody>
 					<tr>
 						<td>
@@ -159,7 +109,7 @@ img.ke-anchor {
 							1期
 						</td>
 						<td>
-							<span style="white-space:normal;">0%</span><br>
+							<span style="white-space:normal">0%</span><br>
 						</td>
 						<td>
 							0%
@@ -170,10 +120,10 @@ img.ke-anchor {
 							3期<br>
 						</td>
 						<td>
-							<span style="white-space:normal;">17.2%</span><br>
+							<span style="white-space:normal">17.2%</span><br>
 						</td>
 						<td>
-							<span style="white-space:normal;">0%</span><br>
+							<span style="white-space:normal">0%</span><br>
 						</td>
 					</tr>
 					<tr>
@@ -189,68 +139,68 @@ img.ke-anchor {
 					</tr>
 				</tbody>
 			</table>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
-				<span style="text-indent:15pt;">9. 贷款用途：仅限乙方用于个人消费（购房、购车除外）。乙方使用本额度项下贷款消费时，应保留相应的消费凭据（包括但不限于发票、收据、购物凭证等），在甲方要求提供时，乙方应当提供。</span><span style="text-indent:15pt;">&nbsp;</span> 
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
+				<span style="text-indent:15pt">9. 贷款用途：仅限乙方用于个人消费（购房、购车除外）。乙方使用本额度项下贷款消费时，应保留相应的消费凭据（包括但不限于发票、收据、购物凭证等），在甲方要求提供时，乙方应当提供。</span><span style="text-indent:15pt">&nbsp;</span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="margin-left:0cm;text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="margin-left:0;text-indent:15.05pt">
 				二、<b>客户服务：</b>1.甲方向乙方提供以下与本合同有关的综合性客户服务，服务内容包括：为您提供个性化贷款产品的推荐和线上设计，为您提供多元化的还款渠道和还款渠道维护，为您提供还款提醒和还款到账通知，为您保存、管理您的业务文档并根据您的指令为您查阅、调取、复制您的业务文档，向您指定的其他第三方（包括但不限于其他金融机构等）提供您在甲方的个人申请信息
 、还款信息、信用记录和业务文档。您可以通过电话、邮件、短信、微信等方式向甲方发出您的服务指令。2．甲方就上述服务向乙方收取客户服务费。
 			</p>
-			<p class="MsoBodyText" align="left" style="margin-left:0cm;text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="margin-left:0;text-indent:15.05pt">
 				三、<b>清偿顺序：</b>乙方可通过甲方<span>APP</span>或甲方合作方<span>APP</span>发起主动还款，采用银行或第三方代扣方式还款。<span class="MsoCommentReference">乙方</span>付至甲方账户的款项，按照如下顺序清偿各项债务：<u>客户服务费、分期利息、逾期利息、</u><u>分期本金。</u> 
 			</p>
-			<p class="MsoBodyText" align="left" style="margin-left:0cm;text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="margin-left:0;text-indent:15.05pt">
 				四、<b>提前还款：</b> 1．乙方可以通过甲方<span>APP</span>或甲方合作方<span>APP</span>主动提前偿还额度项下的贷款。<span>2</span>．提前还款金额应不少于<span>100</span>元，最多不超过额度项下贷款本金余额及已计未结利息、费用、逾期利息之和。若额度项下贷款本金余额及已计未结利息、费用、逾期利息小于<span>100</span>元，则应全部偿还。<span>3</span>、提前还款金额优先偿还本金。<span>4</span>、偿还的已计未结利息、费用、逾期利息等计入溢缴款，待下一账单日入账。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="margin-left:0cm;text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="margin-left:0;text-indent:15.05pt">
 				<b>五、</b><b>发放贷款和还款指定账户：</b><b></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>1. </b><b>乙方授权甲方将贷款本金发放至乙方指定的银行账户（账户名：<span>付梓橦</span>；开户行名称：<span>农业银行</span>；账号：<span>6228481698729890221</span>），或者乙方授权甲方将贷款本金直接支付至合作商户指定的银行账户。<span></span></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>2. </b><b>乙方在申请额度时，须指定本条第一款银行账户作为还款账户。<span></span></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>3. </b><b>若乙方指定银行账户发生变更，乙方应在甲方<span>APP</span>或交易平台<span>APP</span>进行账户变更操作并经甲方确认，授权划扣账户相应发生变更。除非乙方特别申明，乙方变更划扣账户的效力及于甲方与乙方签订的所有未结合同。无论何种原因，如果甲方指定第三方代扣失败，乙方在本合同项下的还款义务并不减免，乙方应采用其它合理方式继续偿还。</b><b></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="margin-left:0cm;text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="margin-left:0;text-indent:15pt">
 				六、逾期还款：<span>1</span>．如果乙方未按照本合同履行还款义务，应立即偿还拖欠款项，并按本条规定向甲方支逾期利息。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="margin-left:0cm;text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="margin-left:0;text-indent:15.05pt">
 				七、<b>额度调整与止付：甲方有权根据乙方的贷款表现对额度进行调整，包括调增或调减。</b>若存在拖欠款项，则额度止付，乙方必须偿还全部欠款后方可再次提款。
 			</p>
-			<p class="MsoBodyText" align="left" style="margin-left:0cm;text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="margin-left:0;text-indent:15.05pt">
 				八、<b>各方权利义务：</b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:11.25pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:11.25pt">
 				1.1.乙方承诺并保证向甲方提交的所有资料和信息完整、真实、准确、合法有效。乙方在甲方或甲方合作方的互联网平台上通过点击确认的方式签署本合同，是本人的真实意愿，乙方并已充分理解本协议项下所有内容。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				2.乙方授权甲方或甲方指定第三方从乙方指定或绑定的银行账户将期款及所有本合同项下的其他应付款项划扣至甲方账户，而无需进一步通知乙方或者得到其同意。若乙方指定的银行卡账户暂不支持代扣的，一旦甲方接入乙方指定银行卡账户的代扣服务，乙方同意并不可撤销的授权甲方对其指定的银行账户进行代扣还款的设置，而无需进一步通知乙方或得到其同意。若乙方指定银行账户发生变更，乙方应在账户变更后及时通知甲方并经甲方确认，授权划扣账户相应发生变更。除非乙方特别申明，乙方变更划扣账户的效力及于甲方与乙方签订的所有未结合同。无论何种原因，如果甲方指定第三方代扣失败，乙方在本合同项下的还款义务并不减免，乙方应采用其它合理方式继续偿还。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				3.乙方同意并授权甲方有权使用其自行收集或乙方提供的乙方资料及信息用于以下用途（包括但不限于）：（<span>1</span>）为核实乙方的身份、资料和信息的真实性，向相关的个人、企事业单位、征信机构、国家机关进行必要的验证；（<span>2</span>）为了提供本协议项下的服务，向有关合作机构、征信机构提供必要之资料；（<span>3</span>）用于催收、解决争议、调停纠纷等；（<span>4</span>）根据监管部门、征信机构的要求提供乙方相关信息等。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				乙方为了通过多种渠道获得贷款，特授权甲方：如果乙方未能从甲方处成功获得贷款，则乙方委托甲方将乙方推荐给甲方其他合作伙伴，并授权甲方将乙方的贷款申请、个人信息、评估及审核结果等所有信息资料提供给甲方合作伙伴。甲方合作伙伴使用乙方的贷款申请、个人信息、评估及审核结果等所有信息资料，仅用于向乙方提供相关产品或服务。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				4.乙方同意甲方有权向乙方发送与本协议内容有关的信息及通知，包括但不限于放款通知、还款提醒及逾期催收等信息，发送方式包括但不限于电话、短信、邮寄、传真等。<span></span> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15pt">
 				5.以下任何事件发生，甲方有权宣布贷款提前到期，要求乙方立即一次性偿还本合同项下的全部款项：（<span>1</span>）乙方违约；（<span>2</span>）乙方在其与甲方或其他贷款方签署的任何其他贷款合同项下发生违约；（<span>3</span>）甲方认为乙方可能无能力履行本合同项下相关义务，乙方虚假陈述或有与贷款相关的欺诈行为；（<span>4</span>）甲方认为乙方发生了可能对甲方的权利或利益造成损害的任何其他情形。若在某一期期款的还款到期日<span>90</span>天之后，乙方仍未完全偿还该期期款，则本合同于该还款到期日<span>90</span>天后自动提前终止，乙方应立即一次性偿还本合同下全部款项。
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>九、退货和退款：</b>乙方使用本协议项下贷款所购买的商品或者服务如果出现退货情形的，在乙方贷款尚未结清的情况下，甲方有权要求交易平台直接将退货产生的退款支付给甲方并用于偿还乙方贷款；前述退款不足以清偿乙方全部贷款的，乙方应当在甲方要求的时限内向甲方继续清偿，清偿范围包括但不限于贷款本金、分期利息、客户服务费、逾期利息等。<b><span></span></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>十、争议解决：</b>因本合同引起或与本合同有关的任何争议，由甲方所在地有管辖权的法院管辖，败诉方应承担对方为解决本争议而产生的所有费用，包括但不限于诉讼费、律师费、公证费、交通费等。<b><span></span></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>十一</b><b>、</b><b>合同生效：本合同自甲方首次放款之日起生效。</b><b></b> 
 			</p>
-			<p class="MsoBodyText" align="left" style="text-indent:15.05pt;">
+			<p class="MsoBodyText" align="left" style="text-indent:15.05pt">
 				<b>十二、其他：</b>甲方可自主决定将其在本合同项下的债权转让给任何第三方而无需取得乙方同意；甲方进行债权转让的，可自主决定是否以及采用包括但不限于短信、邮件、信函或公告等各种形式对乙方进行告知；贷款人以公告的方式通知借款人的，自贷款人公告发布之时起满<span>24</span>小时视为通知已送达借款人<b>；除非双方另有约定，债权转让后借款人的偿还支付方式不发生变化。<span></span></b> 
 			</p>
 			<p class="MsoBodyText" align="left">
@@ -263,7 +213,7 @@ img.ke-anchor {
 				日期：<span>2019-04-06</span><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
 			</p>
 			<p class="MsoNormal" align="left">
-				<span><span style="white-space:normal;">乙方：</span>付梓橦</span> 
+				<span><span style="white-space:normal">乙方：</span>付梓橦</span> 
 			</p>
 			<p class="MsoNormal" align="left">
 				日期：<span>2019-04-06</span><span></span> 
