--- a/pay/pay_password.html
+++ b/pay/pay_password.html
@@ -3,48 +3,33 @@
 
 <head>
   <title>支付</title>
-  <!-- <base href="/test/"/> -->
-<base href="/bulid/"/>
+  
+<base href="/bulid/">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
 
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-<!-- 尺寸的设置以及页面是否允许缩放 -->
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"/>
-<!-- 删除苹果默认的工具栏和菜单栏 -->
-<meta name="apple-mobile-web-app-capable" content="yes"/>
-<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-<!-- 忽略页面中的数字识别为电话,忽略email识别 -->
-<meta name="format-detection" content="telephone=no, email=no"/>
-<!-- 启用360浏览器的极速模式(webkit) -->
-<meta name="renderer" content="webkit"/>
-<!-- 解决http https混合加载的安全性问题 -->
-<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content"/>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+<meta name="format-detection" content="telephone=no, email=no">
+
+<meta name="renderer" content="webkit">
+
+<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
 
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502851861933"/>
-<script>
-	// 项目根路径
-	// window._appPath = "http://210.14.129.41:8080/";
-	window._appPath = "/msxfInterface/";
-	// window._sitePath = "/test/"; // 测试
-	window._sitePath = "/bulid/"; // 测试
-</script>
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/style.css?v_1502855519725">
+<script>window._appPath="/msxfInterface/",window._sitePath="/bulid/"</script>
 
-  <style>
-    table.table{font-size: 13px; width: 80%;margin:25px auto;border-radius: 3px; text-align: center; color: #afaeae;border: 1px solid #cccccc;  }
-    table.table tr{}
-    table.table tr th,table.table tr td{ border-bottom: 1px solid #cccccc;margin-top: 5px;font-weight: normal;padding: 7px 0;line-height: 1.5; } 
-    table.table tr th:first-child,table.table tr td:first-child{border-left: none}
-    table.table tr:last-child th,table.table tr:last-child td{border-bottom: none}
-    table.table tr .bl{border-left: 1px solid #cccccc;}
-  </style>
+  <style>table.table{font-size:13px;width:80%;margin:25px auto;border-radius:3px;text-align:center;color:#afaeae;border:1px solid #ccc}table.table tr td,table.table tr th{border-bottom:1px solid #ccc;margin-top:5px;font-weight:400;padding:7px 0;line-height:1.5}table.table tr td:first-child,table.table tr th:first-child{border-left:none}table.table tr:last-child td,table.table tr:last-child th{border-bottom:none}table.table tr .bl{border-left:1px solid #ccc}</style>
 </head>
 
-<body style="background: #eee;padding-bottom:80px;">
+<body style="background:#eee;padding-bottom:80px">
   <header>
-    <a href="loan/index.html?v_1502851861933" class="return_a"></a>支付</header>
+    <a href="loan/index.html?v_1502855519725" class="return_a"></a>支付</header>
   <div class="box-6">
     <p class="h3 step1">
       请您输入支付密码
@@ -53,23 +38,23 @@
       <div id="payPassword_container" class="alieditContainer clearfix" data-busy="0">
         <div class="i-block" data-error="i_error">
           <div class="i-block six-password">
-            <input class="i-text sixDigitPassword" id="payPassword_rsainput" type="password" autocomplete="off" required="required" value="" name="payPassword_rsainput" data-role="sixDigitPassword" tabindex="" maxlength="6" minlength="6" aria-required="true">
-            <div tabindex="0" class="sixDigitPassword-box" style="width: 236px;">
-              <i style="width: 39px; border-color: transparent;" class=""><b style="visibility: hidden;"></b></i>
-              <i style="width: 39px;"><b style="visibility: hidden;"></b></i>
-              <i style="width: 39px;"><b style="visibility: hidden;"></b></i>
-              <i style="width: 39px;"><b style="visibility: hidden;"></b></i>
-              <i style="width: 39px;"><b style="visibility: hidden;"></b></i>
-              <i style="width: 39px;"><b style="visibility: hidden;"></b></i>
-              <span style="width: 40px; left: 0px; visibility: hidden;" id="cardwrap" data-role="cardwrap"></span>
+            <input class="i-text sixDigitPassword" id="payPassword_rsainput" type="password" autocomplete="off" required="required" name="payPassword_rsainput" data-role="sixDigitPassword" tabindex="" maxlength="6" minlength="6" aria-required="true">
+            <div tabindex="0" class="sixDigitPassword-box" style="width:236px">
+              <i style="width:39px;border-color:transparent"><b style="visibility:hidden"></b></i>
+              <i style="width:39px"><b style="visibility:hidden"></b></i>
+              <i style="width:39px"><b style="visibility:hidden"></b></i>
+              <i style="width:39px"><b style="visibility:hidden"></b></i>
+              <i style="width:39px"><b style="visibility:hidden"></b></i>
+              <i style="width:39px"><b style="visibility:hidden"></b></i>
+              <span style="width:40px;left:0;visibility:hidden" id="cardwrap" data-role="cardwrap"></span>
             </div>
           </div>
-          <!-- <span>请输入6位支付密码( 数字！)</span> -->
+          
         </div>
       </div>
-      <!-- <input type="submit" value="提交"> -->
+      
     </form>
-  <div class="">
+  <div>
     <table class="table">
         <tr>
           <th>分期方式</th>
@@ -95,17 +80,17 @@
   <a href="#" class="btn-view btn pass-submit">提交</a>
   <a href="#" class="btn-view hide btn pass-reset">重新设置</a>
   <div class="box-6-1 hide">
-    <p class=" ">
-      <img id="barcode1"/>
+    <p>
+      <img id="barcode1">
     </p>
     <div id="code"></div>
 
   </div>
-  <div class="box-logo  pay-box-logo">
+  <div class="box-logo pay-box-logo">
     <div class="hd">
-      <span class=""><img src="./img/jh/logo3.png" alt=""></span>
-      <span class=""><img src="./img/jh/logo2.png" alt=""></span>
-      <span class=""><img src="./img/jh/logo1.png" alt=""></span>
+      <span><img src="./img/jh/logo3.png" alt=""></span>
+      <span><img src="./img/jh/logo2.png" alt=""></span>
+      <span><img src="./img/jh/logo1.png" alt=""></span>
     </div>
     <div class="bd text-center">
       本服务由佳惠集团、马上消费金融、信柏科技联合提供
@@ -113,35 +98,19 @@
   </div>
 </body>
 
-<!-- <scr ipt src='js/lib/zepto/zepto.min.js'></script> -->
-<!-- <sc ript src='js/lib/zepto.cookie/zepto.cookie.min.js'></script> -->
-<script src='js/lib/jquery/3.1.1/jquery.min.js'></script>
-<script src='js/lib/jquery.cookie/jquery.cookie.js'></script>
-<script src='js/lib/vue/vue.min.js'></script>
-<script src='js/lib/vue/vue-resource.min.js'></script>
-<script src='js/common/dictionary.js'></script>
-<script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502851861933'></script>
+
+
+<script src="js/lib/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/lib/jquery.cookie/jquery.cookie.js"></script>
+<script src="js/lib/vue/vue.min.js"></script>
+<script src="js/lib/vue/vue-resource.min.js"></script>
+<script src="js/common/dictionary.js"></script>
+<script src="js/common/common.js"></script>
+<script src="js/common/main.js?v_1502855519725"></script>
   <script src="js/lib/jquery-validate/jquery-validate.js"></script>
   <script src="js/lib/jquery.qrcode/jquery.qrcode.min.js"></script>
   <script src="js/lib/JsBarcode/JsBarcode.all.min.js"></script>
   <script src="js/pay/password.js"></script>
-  <script>
-    jQuery(function($){
-      function reFn(){
-        var h = $(window).height()
-        // console.log(h)
-        if(h<573){
-          $('.pay-box-logo').css('top','500px')
-        }else{
-          $('.pay-box-logo').css('top','auto')
-        }
-      }
-      reFn()
-      $(window).resize(function(){
-        reFn()
-      });
-    });
-  </script>
+  <script>jQuery(function(o){function n(){o(window).height()<573?o(".pay-box-logo").css("top","500px"):o(".pay-box-logo").css("top","auto")}n(),o(window).resize(function(){n()})})</script>
 
 </html>
