--- a/loan/instalment-repayment.html
+++ b/loan/instalment-repayment.html
@@ -2,64 +2,54 @@
 <html>
 <head>
   <title>待还账单</title>
-    <!-- <base href="/test/"/> -->
-<base href="/bulid/"/>
+    
+<base href="/bulid/">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
 
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-<!-- 尺寸的设置以及页面是否允许缩放 -->
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"/>
-<!-- 删除苹果默认的工具栏和菜单栏 -->
-<meta name="apple-mobile-web-app-capable" content="yes"/>
-<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-<!-- 忽略页面中的数字识别为电话,忽略email识别 -->
-<meta name="format-detection" content="telephone=no, email=no"/>
-<!-- 启用360浏览器的极速模式(webkit) -->
-<meta name="renderer" content="webkit"/>
-<!-- 解决http https混合加载的安全性问题 -->
-<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content"/>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+<meta name="format-detection" content="telephone=no, email=no">
+
+<meta name="renderer" content="webkit">
+
+<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
 
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502854514867"/>
-<script>
-	// 项目根路径
-	// window._appPath = "http://210.14.129.41:8080/";
-	window._appPath = "/msxfInterface/";
-	// window._sitePath = "/test/"; // 测试
-	window._sitePath = "/bulid/"; // 测试
-</script>
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/style.css?v_1502855519725">
+<script>window._appPath="/msxfInterface/",window._sitePath="/bulid/"</script>
 
-  <link rel="stylesheet" href="css/scale_slip.css"/>
+  <link rel="stylesheet" href="css/scale_slip.css">
 </head>
-<body class="fill-detail" style="background: #e4e4e4;">
+<body class="fill-detail" style="background:#e4e4e4">
 
 <div class="top-loan">
   <div class="top-header">
     <a href="javascript:history.back(-1)" class="return_a"> </a>
     账单
-    <!-- <a href="javascript:;" class="top-zhifu">
-      支付
-    </a> -->
+    
   </div>
 </div>
 <div class="main" v-cloak>
   <div class="box-3">
-    <div class="hd"><div class="">{{ date }}</div><div class="">订单号: <span class="color-blue">{{ refNo }}</span></div></div>
+    <div class="hd"><div>{{ date }}</div><div>订单号: <span class="color-blue">{{ refNo }}</span></div></div>
     <div class="hd">账单金额: <span class="color-red">¥ {{ (+amt).toFixed(2) }}</span></div>
   </div>
   <div class="box-2-1">
-    <ul class="">
-      <li class="active ">
+    <ul>
+      <li class="active">
         <div class="bd">
           <div class="item" v-for="item in list" v-on:click="itemFn(item.term, item.fee, item.rate, item.amt, amt, date)">
             <div class="hd-line">
-              <div class="l"><i class=""></i>分期方式</div>
+              <div class="l"><i></i>分期方式</div>
               <div class="r">{{ item.term }}期</div>
             </div>
             <div class="bd-line">
-              <div class="l"><i class=""></i>每月还款</div>
+              <div class="l"><i></i>每月还款</div>
               <div class="r"><span class="color-red">{{ (+item.amt).toFixed(2) }}</span></div>
             </div>
           </div>  
@@ -72,19 +62,17 @@
  
 </body>
 
-<!-- <scr ipt src='js/lib/zepto/zepto.min.js'></script> -->
-<!-- <sc ript src='js/lib/zepto.cookie/zepto.cookie.min.js'></script> -->
-<script src='js/lib/jquery/3.1.1/jquery.min.js'></script>
-<script src='js/lib/jquery.cookie/jquery.cookie.js'></script>
-<script src='js/lib/vue/vue.min.js'></script>
-<script src='js/lib/vue/vue-resource.min.js'></script>
-<script src='js/common/dictionary.js'></script>
-<script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502854514867'></script>
-<script>
-  // 获得结果信息 
-</script>
-<script src="js/loan/instalment-repayment.js?v_1502854514867"></script>
+
+
+<script src="js/lib/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/lib/jquery.cookie/jquery.cookie.js"></script>
+<script src="js/lib/vue/vue.min.js"></script>
+<script src="js/lib/vue/vue-resource.min.js"></script>
+<script src="js/common/dictionary.js"></script>
+<script src="js/common/common.js"></script>
+<script src="js/common/main.js?v_1502855519725"></script>
+<script></script>
+<script src="js/loan/instalment-repayment.js?v_1502855519725"></script>
 
 
 </html>
