--- a/loan/loan_step1.html
+++ b/loan/loan_step1.html
@@ -2,51 +2,41 @@
 <html>
 <head>
 	<title>基本信息</title>
-	<!-- <base href="/test/"/> -->
-<base href="/bulid/"/>
+	
+<base href="/bulid/">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
 
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-<!-- 尺寸的设置以及页面是否允许缩放 -->
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"/>
-<!-- 删除苹果默认的工具栏和菜单栏 -->
-<meta name="apple-mobile-web-app-capable" content="yes"/>
-<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-<!-- 忽略页面中的数字识别为电话,忽略email识别 -->
-<meta name="format-detection" content="telephone=no, email=no"/>
-<!-- 启用360浏览器的极速模式(webkit) -->
-<meta name="renderer" content="webkit"/>
-<!-- 解决http https混合加载的安全性问题 -->
-<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content"/>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+<meta name="format-detection" content="telephone=no, email=no">
+
+<meta name="renderer" content="webkit">
+
+<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
 
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502851861933"/>
-<script>
-	// 项目根路径
-	// window._appPath = "http://210.14.129.41:8080/";
-	window._appPath = "/msxfInterface/";
-	// window._sitePath = "/test/"; // 测试
-	window._sitePath = "/bulid/"; // 测试
-</script>
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/style.css?v_1502855519725">
+<script>window._appPath="/msxfInterface/",window._sitePath="/bulid/"</script>
 
 
 </head>
-<body style="background: #e4e4e4;">
+<body style="background:#e4e4e4">
 <header>
-	<!-- <a href="javascript:history.back(-1)" class="return_a">返回</a>基本信息 -->
+	
 <div class="top-header">
 		<a href="javascript:history.back(-1)" class="return_a"> </a>
 		基本信息
-		<!-- <a href="javascript:;" class="top-zhifu">
-			支付
-		</a> -->
+		
 	</div>
 </header>
 <form action="" method="post" class="user-info-form" id="user-info-form">
-	<!-- 第一步 begin -->
-	<div class="first-step ">
+	
+	<div class="first-step">
 
 		<ul class="steps"> 
             <li class="step steping"><i class="step-icon">1</i><label>基本信息</label></li>
@@ -59,7 +49,7 @@
 				姓名
 			</div>
 			<div class="form-controls">
-				<input type="text" name="real_name" value="" class="text name_text"  placeholder="请输入姓名" />
+				<input type="text" name="real_name" class="text name_text" placeholder="请输入姓名">
 			</div>
 		</div>
 		<div class="form-row">
@@ -67,7 +57,7 @@
 				身份证号
 			</div>
 			<div class="form-controls">
-				<input type="text" name="number" value="" class="text card_text certNo" placeholder="请输入身份证号"  />
+				<input type="text" name="number" class="text card_text certNo" placeholder="请输入身份证号">
 			</div>
 		</div>
 		<div class="validator region-box">
@@ -76,8 +66,8 @@
 					银行卡号
 				</div>
 				<div class="form-controls">
-					<input type="text" name="number"  class="text form-card cardNo" maxlength="19"  placeholder="请填写银行卡号" value="" data-rule="required bankCard" data-rule-msg="请填写银行卡号"/>
-					<a href="loan/support_bank.html?v_1502851861933" class="support-bank">
+					<input type="text" name="number" class="text form-card cardNo" maxlength="19" placeholder="请填写银行卡号" data-rule="required bankCard" data-rule-msg="请填写银行卡号">
+					<a href="loan/support_bank.html?v_1502855519725" class="support-bank">
 						支持银行
 					</a>
 				</div>
@@ -87,31 +77,25 @@
 					开户地
 				</div>
 				<div class="form-controls">
-					<input class="select-assistor" type="text" placeholder="请选择省" value="" readonly="readonly" data-rule="required"/>
+					<input class="select-assistor" type="text" placeholder="请选择省" readonly="readonly" data-rule="required">
 					<select name="deposit_bank_province_code" class="cardProvinceCode" data-region="provinceCode"></select>
 				</div>
 			</div>
 			<div class="form-row region-item">
 				<div class="form-label"></div>
 				<div class="form-controls">
-					<input class="select-assistor" type="text" placeholder="请选择市/区" value="" readonly="readonly" data-rule="required"/>
+					<input class="select-assistor" type="text" placeholder="请选择市/区" readonly="readonly" data-rule="required">
 					<select name="deposit_bank_city_code" class="cardCityCode" data-region="cityCode"></select>
 				</div>
 			</div>
-			<!-- <div class="form-row region-item">
-				<div class="form-label"></div>
-				<div class="form-controls">
-					<input class="select-assistor" type="text" placeholder="请选择市/区" value="" readonly="readonly" data-rule="required"/>
-					<select name="deposit_bank_city_code" data-region="countyCode"></select>
-				</div>
-			</div> -->
+			
 			
 			<div class="form-row">
 				<div class="form-label">
 					会员卡号
 				</div>
 				<div class="form-controls">
-					<input type="number" name="member_number" value="" class="text member_number " placeholder="输入会员卡号" maxlength="11" data-rule="required number" readonly="readonly" data-rule-msg="请输入正确的会员卡号"/>
+					<input type="number" name="member_number" class="text member_number" placeholder="输入会员卡号" maxlength="11" data-rule="required number" readonly="readonly" data-rule-msg="请输入正确的会员卡号">
 				</div>
 			</div>
 			<div class="form-row">
@@ -119,7 +103,7 @@
 					手机号
 				</div>
 				<div class="form-controls">
-					<input type="tel" name="phone_number" value="" class="text phone_number cellphone" placeholder="输入银行预留手机号" maxlength="11" data-rule="required mobile" data-rule-msg="请输入正确的手机号"/>
+					<input type="tel" name="phone_number" class="text phone_number cellphone" placeholder="输入银行预留手机号" maxlength="11" data-rule="required mobile" data-rule-msg="请输入正确的手机号">
 				</div>
 			</div>
 		</div>
@@ -128,35 +112,31 @@
 				验证码
 			</div>
 			<div class="form-controls">
-				<input type="text" name="bankcard_captcha" class="text form-yzm" maxlength="6" placeholder="短信验证码" value="" data-rule="required smsCode" data-rule-msg="请输入短信验证码"/>
-				<input type="button" class="sms-code" id="sms-code" value="免费获取验证码"/>
+				<input type="text" name="bankcard_captcha" class="text form-yzm" maxlength="6" placeholder="短信验证码" data-rule="required smsCode" data-rule-msg="请输入短信验证码">
+				<input type="button" class="sms-code" id="sms-code" value="免费获取验证码">
 			</div>
 		</div>
-		<!-- <p class="yzm-fail">
-			<a href="javascript:;">收不到验证码?</a>
-		</p> -->
-		<!-- <p class="text_version">* 马上消费金融持有银监会消费金融牌照，在您申请过程中会依法查询您的央行征信记录。</p> -->
+		
+		
 		<button class="btn-next btn" type="button" disabled="disabled" id="next">
 			下一步
 		</button>
 	</div>
-	<!-- 第一步 end -->
+	
 </form>
 
 </body>
-<script>
-	// hrel='< %=hrel';
-</script>
+<script></script>
 
-<!-- <scr ipt src='js/lib/zepto/zepto.min.js'></script> -->
-<!-- <sc ript src='js/lib/zepto.cookie/zepto.cookie.min.js'></script> -->
-<script src='js/lib/jquery/3.1.1/jquery.min.js'></script>
-<script src='js/lib/jquery.cookie/jquery.cookie.js'></script>
-<script src='js/lib/vue/vue.min.js'></script>
-<script src='js/lib/vue/vue-resource.min.js'></script>
-<script src='js/common/dictionary.js'></script>
-<script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502851861933'></script>
+
+
+<script src="js/lib/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/lib/jquery.cookie/jquery.cookie.js"></script>
+<script src="js/lib/vue/vue.min.js"></script>
+<script src="js/lib/vue/vue-resource.min.js"></script>
+<script src="js/common/dictionary.js"></script>
+<script src="js/common/common.js"></script>
+<script src="js/common/main.js?v_1502855519725"></script>
 <script src="js/loan/step1.js?11"></script>
 <script src="data/city.data.js"></script>
 </html>
