--- a/loan/loan_success_contract.html
+++ b/loan/loan_success_contract.html
@@ -2,47 +2,35 @@
 <html>
 <head>
 	<title>贷款合同</title>
-	<!-- <base href="/test/"/> -->
-<base href="/bulid/"/>
+	
+<base href="/bulid/">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
 
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-<!-- 尺寸的设置以及页面是否允许缩放 -->
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"/>
-<!-- 删除苹果默认的工具栏和菜单栏 -->
-<meta name="apple-mobile-web-app-capable" content="yes"/>
-<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-<!-- 忽略页面中的数字识别为电话,忽略email识别 -->
-<meta name="format-detection" content="telephone=no, email=no"/>
-<!-- 启用360浏览器的极速模式(webkit) -->
-<meta name="renderer" content="webkit"/>
-<!-- 解决http https混合加载的安全性问题 -->
-<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content"/>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+<meta name="format-detection" content="telephone=no, email=no">
+
+<meta name="renderer" content="webkit">
+
+<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
 
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502851861933"/>
-<script>
-	// 项目根路径
-	// window._appPath = "http://210.14.129.41:8080/";
-	window._appPath = "/msxfInterface/";
-	// window._sitePath = "/test/"; // 测试
-	window._sitePath = "/bulid/"; // 测试
-</script>
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/style.css?v_1502855519725">
+<script>window._appPath="/msxfInterface/",window._sitePath="/bulid/"</script>
 
 </head>
-<body style="background: #eee;">
+<body style="background:#eee">
 <header><a href="javascript:history.back(-1)" class="return_a">返回</a>贷款合同</header>
 <form action="" method="post" class="user-info-form" id="user-info-form">
-	<!-- 第三步 begin -->
+	
 	<div class="three-step region-box">
-		<!-- <ul class="steps"> 
-            <li class="step"><i class="step-icon">1</i><label>基本信息</label></li>
-			<li class="step steping"><i class="step-icon">2</i><label>完善信息</label></li>
-			<li class="step"><i class="step-icon">3</i><label>审批成功</label></li>
-        </ul> -->
-        <!-- <div class="text-center step-info">信息完整度会影响信用额度哦</div> -->
+		
+        
 		 
  
 		<div class="read-agreement-box">
@@ -51,22 +39,22 @@
 				<iframe id="iframeContract" src="" height="500" width="100%" frameborder="0"></iframe>
 			</div>
 		</div>
-		<button  class="btn-view btn">签约</button>
+		<button class="btn-view btn">签约</button>
 		
 	</div>
-	<!-- 第三步 end -->
+	
 </form>
 </body>
 	
-<!-- <scr ipt src='js/lib/zepto/zepto.min.js'></script> -->
-<!-- <sc ript src='js/lib/zepto.cookie/zepto.cookie.min.js'></script> -->
-<script src='js/lib/jquery/3.1.1/jquery.min.js'></script>
-<script src='js/lib/jquery.cookie/jquery.cookie.js'></script>
-<script src='js/lib/vue/vue.min.js'></script>
-<script src='js/lib/vue/vue-resource.min.js'></script>
-<script src='js/common/dictionary.js'></script>
-<script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502851861933'></script>
-<!-- <scr ipt src="data/city.data.js"></script> -->
+
+
+<script src="js/lib/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/lib/jquery.cookie/jquery.cookie.js"></script>
+<script src="js/lib/vue/vue.min.js"></script>
+<script src="js/lib/vue/vue-resource.min.js"></script>
+<script src="js/common/dictionary.js"></script>
+<script src="js/common/common.js"></script>
+<script src="js/common/main.js?v_1502855519725"></script>
+
 <script src="js/loan/loan_success_contract.js"></script>
 </html>
